// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render correctly when NOT focused 1`] = `
<View
  isFocus={false}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#c7c7cc",
        "borderRadius": 22,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "maxWidth": 675,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
        "shadowColor": "#151515",
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "width": 320,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="placeholder"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
    underlineColorAndroid="transparent"
  >
    <Text
      color="#626262"
      style={
        Array [
          Object {
            "color": "#626262",
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "fontWeight": "normal",
            "lineHeight": 20,
          },
        ]
      }
    />
  </TextInput>
</View>
`;

exports[`<TextInput /> should render correctly when focused 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,13 +1,13 @@
  <View
-   isFocus={false}
+   isFocus={true}
    style={
      Array [
        Object {
          \\"alignItems\\": \\"center\\",
          \\"backgroundColor\\": \\"#ffffff\\",
-         \\"borderColor\\": \\"#c7c7cc\\",
+         \\"borderColor\\": \\"#eb0055\\",
          \\"borderRadius\\": 22,
          \\"borderStyle\\": \\"solid\\",
          \\"borderWidth\\": 1,
          \\"flexDirection\\": \\"row\\",
          \\"height\\": 40,"
`;

exports[`<TextInput /> should render correctly when in error 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,13 +1,14 @@
  <View
+   isError={true}
    isFocus={false}
    style={
      Array [
        Object {
          \\"alignItems\\": \\"center\\",
          \\"backgroundColor\\": \\"#ffffff\\",
-         \\"borderColor\\": \\"#c7c7cc\\",
+         \\"borderColor\\": \\"#b60025\\",
          \\"borderRadius\\": 22,
          \\"borderStyle\\": \\"solid\\",
          \\"borderWidth\\": 1,
          \\"flexDirection\\": \\"row\\",
          \\"height\\": 40,"
`;
